# ITGE

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_REPORT.md  README.md  dashboard.html  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: OPERATIONS.md
examples/: example_attack_simulation.py  example_explainability.py  example_full_pipeline.py  example_ingestion.py  example_trust_detection.py
itge/: __init__.py
itge/api/: __init__.py  main.py
itge/application/services/: __init__.py  attack_path_service.py  explainability_service.py  graph_construction_service.py  ingestion_service.py  trust_detection_service.py
itge/cli/: __init__.py  __main__.py  config.py  main.py
itge/datasets/juice_shop/: low_user.json
itge/domain/models/: __init__.py  asset.py  attack_path.py  base.py  explainability.py  findings.py  identity.py  relationships.py
itge/infrastructure/analyzers/: __init__.py  header_trust_analyzer.py  jwt_trust_analyzer.py  oauth_trust_analyzer.py  role_misuse_analyzer.py
itge/infrastructure/detectors/: pattern_detector.py
itge/infrastructure/graph/: __init__.py  neo4j_repository.py  path_finder.py
itge/infrastructure/normalizers/: traffic_normalizer.py
itge/infrastructure/parsers/: __init__.py  base.py
itge/infrastructure/parsers/amass/: __init__.py  json_parser.py
itge/infrastructure/parsers/burp/: __init__.py  xml_parser.py
itge/infrastructure/parsers/nmap/: __init__.py  xml_parser.py
itge/infrastructure/parsers/zap/: __init__.py  xml_parser.py
tests/: test_api.py  test_attack_path_service.py  test_cli_help.py  test_ingestion_service.py  test_normalizer.py  test_pattern_detector.py
